# dotview

./: .gitignore  README.md  pyproject.toml
dotview/: __init__.py  common.py  config.py  dotview.py  jsonpath.py  na.py  treeview.py
tests/: test_common.py  test_dotview.py  test_init.py  test_jsonpath.py  test_na.py  test_treeview.py
